# Tps_Parrallel_Computing

./: .gitignore  README.md  nombres.txt
Tp1/: CMakeLists.txt  FindGMP.cmake
Tp1/src/: Compute.cpp  Compute.hpp  Types.cpp  Types.hpp  check_prime.cpp  check_prime.hpp  generateNb.py  generateNb2.py  get_prime.c  get_prime.h  main.cpp  mainpar.cpp  mainpar_sansmutex.cpp  mainseq.cpp  nombres.txt  nombres10.txt  nombres2.txt  nombres3.txt  nombres4.txt  nombres5.txt  nombres6.txt  nombres7.txt  nombres8.txt  nombres9.txt  temp.cpp
Tp2/: CMakeLists.txt  FindGMPXX.cmake
Tp2/src/: Compute.cpp  Compute.hpp  Types.cpp  Types.hpp  erreurs.txt  generateNb.py  generateNb2.py  main.cpp  main_extra.cpp  main_for.cpp  main_for_maison.cpp  main_intra.cpp  main_multi.cpp  main_numbers.cpp  main_simple.cpp  run_test.py
Tp3/: CMakeLists.txt
Tp3/src/: Matrix.hpp  err.txt  main.cpp  test.cpp
Tp4/: CMakeLists.txt
Tp4/src/: Matrix.cpp  compute_line.cl  compute_line_kernel.cl  compute_norm.cl  hello_kernel.cl  main.cpp  main_acc.cpp  main_opencl.cpp  main_opencl_many_kernel.cpp  normalise_pivot_kernel.cl  test.cpp  util.hpp
Tp4Acc/: CMakeLists.txt  main
Tp4Acc/src/: Matrix.hpp  main_acc.cpp
Tp5/: PageRankPar.py  PageRankSeq.py  PageRankSeqOk.py  test.json  test.py  test.txt  tools.py
